<resources>
    <string name="app_name">Personas</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="consultar">Consultar</string>
    <string name="dui">dui</string>
    <string name="duier">Dui</string>
    <string name="nombre">Nombre</string>
    <string name="buscar">Buscar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="limpiar">Limpiar</string>
</resources>
